# peer-review-flower

./: .flake8  .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  docs.yml  install.yml  prflwr.yml
dev/: build-docs.sh  format.sh  test.sh
doc/diagrams/: activity.puml  class.puml  component.puml  deployment.puml  sequence.puml  state.puml
doc/imgs/: classi.puml  seq_server_strategy.puml  sequenza.puml
doc/source/: conf.py  index.rst  modules.rst  prflwr.peer_review.rst  prflwr.peer_review.strategy.rst  prflwr.rst  prflwr.simulation.rst  prflwr.utils.rst
examples/centralized/: centralized.py  run.sh  utils.py
examples/federated/: client.py  run.sh  server.py  utils.py
examples/peer_reviewed/: client.py  run.sh  server.py  strategy.py
examples/sim_peer_reviewed/: run.sh  simulation.py
experiments/: centralized_gpu.ipynb
experiments/fedavg/: README.md  sim_fedavg_gpu.ipynb
experiments/fedes/: README.md  centralized.ipynb  centralized.py  centralized_gpu.ipynb  resnet.py  sim_fedes_gpu.ipynb  utils.py
experiments/fedls/: README.md  centralized.ipynb  sim_fedavg.ipynb  sim_fedls.ipynb  sim_fedls_gpu.ipynb
experiments/fedlsbt/: README.md  fedlsbt_classification.ipynb  fedlsbt_regression.ipynb
experiments/fedlsbt-dockerized/: .env  README.md  build-images.sh  client.py  requirements.txt  run-dev.sh  run-docker.sh  server.py  utils.py
prflwr/: __init__.py
prflwr/peer_review/: __init__.py  client.py  config.py  (+3 more)
tests/: test_centralized.py  test_federated.py  test_peer_reviewed.py
(+72 files in other folders)
